--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,16 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+aes-gcm = "0.10.3"
 anyhow = "1.0.89"
 aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
+aws-sdk-cloudwatch = { version = "1.56.0", features = ["behavior-version-latest"] }
 aws-sdk-cognitoidentityprovider = { version = "1.57.0", features = ["behavior-version-latest"] }
 aws-sdk-dynamodb = { version = "1.30.0", features = ["behavior-version-latest"] }
+aws-sdk-kms = { version = "1.51.0", features = ["behavior-version-latest"] }
+aws-sdk-organizations = { version = "1.57.0", features = ["behavior-version-latest"] }
+aws-sdk-ssm = { version = "1.56.0", features = ["behavior-version-latest"] }
+aws-sdk-sts = { version = "1.51.0", features = ["behavior-version-latest"] }
 aws-smithy-runtime-api = "1.6.1"
 aws-smithy-types = "1.1.10"
 axum.workspace = true
@@ -32,6 +38,7 @@ chrono = { version = "0.4.38", default-features = false, features = ["std"] }
 hex = { version = "0.4.3", features = ["serde"] }
 josekit = { version = "0.10.0", default-features = false, features = ["vendored"] }
 migrator = { path = "migrator" }
+rand = "0.8.5"
 reqwest = { version = "0.12.9", default-features = false, features = ["http2", "rustls-tls"] }
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
