--- a/migrator/Cargo.toml
+++ b/migrator/Cargo.toml
@@ -8,4 +8,6 @@ edition.workspace = true
 [dependencies]
 anyhow = "1.0.86"
 surrealdb.workspace = true
+tokio.workspace = true
 tracing.workspace = true
+tracing-subscriber.workspace = true
