Only run deploy job via local actions
This will run any dependencies of the deploy job, too. But those can be
commented out as desired.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,6 +41,8 @@
 				"ubuntu-latest=-self-hosted",
 				"--env",
 				"AWS_PROFILE=archodex-dev-AdministratorAccess",
+				"--job",
+				"deploy",
 			],
 			"problemMatcher": [],
 			"group": {
