Prevent crawling of app assets

--- a/template.yaml
+++ b/template.yaml
@@ -1997,6 +1997,9 @@ Resources:
             - Header: Cache-Control
               Override: true
               Value: no-store
+            - Header: X-Robots-Tag
+              Override: true
+              Value: none, noimageindex
         SecurityHeadersConfig:
           ContentSecurityPolicy:
             ContentSecurityPolicy: default-src 'self'; connect-src https://*.{{resolve:ssm:/account_subdomain/domain}}; img-src 'self' https://cdn.jsdelivr.net/npm/aws-svg-icons@3.0.0-2021-07-30/ https://cdn.jsdelivr.net/npm/lucide-static@0.471.0/ https://cdn.jsdelivr.net/npm/simple-icons@v14/; object-src 'none'; base-uri 'none'; frame-ancestors 'none'; form-action 'none';
@@ -2017,6 +2020,11 @@ Resources:
     Properties:
       ResponseHeadersPolicyConfig:
         Name: !Sub ${AWS::StackName}-assets
+        CustomHeadersConfig:
+          Items:
+            - Header: X-Robots-Tag
+              Override: true
+              Value: none, noimageindex
         SecurityHeadersConfig:
           ContentTypeOptions:
             Override: true
