--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,9 @@
 				"--output-format",
 				"zip"
 			],
+			"env": {
+				"PATH": "${env:PATH}:${env:HOME}/zig",
+			},
 			"problemMatcher": [
 				"$rustc"
 			],
@@ -50,6 +53,11 @@
 				"--job",
 				"deploy",
 			],
+			"options": {
+				"env": {
+					"PATH": "${env:PATH}:${env:HOME}/bin:${env:HOME}/zig",
+				},
+			},
 			"problemMatcher": [],
 			"group": {
 				"kind": "build",
@@ -69,6 +77,11 @@
 				"--job",
 				"deploy",
 			],
+			"options": {
+				"env": {
+					"PATH": "${env:PATH}:${env:HOME}/bin:${env:HOME}/zig",
+				},
+			},
 			"problemMatcher": [],
 			"group": {
 				"kind": "build",
