Add support for hitting remote backend from local frontend

--- a/template.yaml
+++ b/template.yaml
@@ -155,6 +155,10 @@ Resources:
           - IsProd
           - !Ref AWS::NoValue
           - http://localhost:5173/oauth2/passkeyresponse
+        - !If
+          - IsProd
+          - !Ref AWS::NoValue
+          - !Sub https://api.${AWS::Region}.{{resolve:ssm:/account_subdomain/domain}}/oauth2/idpresponse/local
       ClientName: app
       DefaultRedirectURI: !Sub https://api.${AWS::Region}.{{resolve:ssm:/account_subdomain/domain}}/oauth2/idpresponse
       ExplicitAuthFlows:
